css/style.css
@import 'normalize.css';
* {
    box-sizing: border-box;
}

div,
header,
section,
article,
aside,
main {
    border: solid 1px white;
}

body {
    text-align: center;
    background-color: black;
    position: relative;
    font-family: sans-serif;
    font-size: 12px;
    height: 100%;
    padding: 0;
    margin: 0;
}

main {
    width: 100%;
    /* max-width: 400px; */
    margin: 0 auto 0 auto;
    display: inline-block;
    position: relative;
}

header {
    height: 205px;
    width: 100%;
    background-color: white;
    margin: 0;
    display: inline-block;
    /* border-collapse: collapse; */
    /* border-bottom: solid 0.5px black; */
    position: relative;
}

.wrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

ul {
    list-style-type: none;
    margin: 0 auto 0 auto;
    padding: 0;
    position: relative;
    top: 10px;
}

li {
    display: inline-block;
    text-align: center;
    margin: 3px;
}

li a {
    display: block;
    text-decoration: none;
    color: black;
    /*border-bottom: solid 2px black;*/
    padding: 3px;
    font-weight: bold;
}

li a.active {
    color: #2e9cd9;
    border: solid 2px #2e9cd9;
}

header h1 {
    letter-spacing: 5px;
    font-size: 18px;
    white-space: nowrap;
    margin-top: 50px;
}

#speed {
    min-height: 248px;
    width: 100%;
    background-color: white;
    margin: 0 0 15% 0;
    display: inline-block;
    border-collapse: collapse;
    /* border-top: solid 1px black; */
    position: relative;
}

#speed>.wrapper {
    width: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -70%);
}

#speed h3 {
    white-space: nowrap;
    margin-bottom: 70px;
}

#speed:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 50%;
    border-width: 16px;
    border-style: solid;
    border-color: #fff;
    transform: rotate(45deg) translateY(70%);
}

.meter {
    border: none;
    width: 100%;
}

.meter>label {
    margin: 0 7%;
    text-align: center;
    display: inline-block;
    width: 10%;
}

.meter>label.checked {
    color: #278cc2;
    font-weight: bold;
}

label>span,
label>input {
    display: block;
    margin: 5px auto;
    font-size: 14px;
}

.mercury {
    padding: 10px;
    background-color: #96cfed;
    border-radius: 10px;
    border: none;
    width: 12.5%;
    position: relative;
    z-index: -1;
}

.thermometer {
    border: solid 1.5px black;
    border-radius: 13px;
    margin-top: -90px;
    margin-bottom: -26px;
    background: linear-gradient(90deg, transparent 12.5%, black 12.5%, transparent 13%, transparent 37.5%, black 37.5%, transparent 38%, transparent 62.5%, black 62.5%, transparent 63%, transparent 87.5%, black 87.5%, transparent 88%);
}

.slider {
    background-color: black;
    border-radius: 50%;
    border: solid 6px #278cc2;
    display: inline-block;
    width: 30px;
    height: 30px;
    position: relative;
    left: -37.5%;
}

section {
    height: 100%;
}

article {
    width: 90%;
    margin: 2% auto 2% auto;
    display: table;
    position: relative;
    padding: 5% 2% 5% 2%;
    border-spacing: 10px 0;
}

#lead {
    background-color: #278cc2;
}

#lead:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    border-width: 12px;
    border-style: solid;
    border-color: #000 #015581 #015581 #000;
}

#blurb,
#detail {
    background-color: #a6a6a6;
}

#blurb:before,
#detail:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    border-width: 12px;
    border-style: solid;
    border-color: #000 #686868 #686868 #000;
}

aside {
    display: table-cell;
    width: 28%;
    height: 100%;
    /* border: solid 1px yellow; */
    position: relative;
}

#lead>aside {
    vertical-align: middle;
    text-align: left;
}

#blurb>aside {
    vertical-align: bottom;
    text-align: right;
}

#detail>aside {
    vertical-align: top;
    text-align: left;
}

main.article {
    display: inline-block;
    width: 100%;
    text-align: left;
    color: white;
    line-height: 1.35;
}

main.article>h2 {
    margin-bottom: 0;
}

#blurb>main,
#detail>main {
    color: black;
}

#blurb button,
#detail button {
    color: black;
    border-color: black;
}

.learn-more {
    background-color: transparent;
    border: solid 2px white;
    padding: 6px 12px 6px 12px;
    border-radius: 15px;
    color: white;
}

img {
    width: 90%;
    height: auto;
}

#lead img {
    vertical-align: middle;
}

#blurb img {
    vertical-align: bottom;
}

#detail img {
    vertical-align: top;
}

@media only screen and (min-width: 700px) {
    body {
        font-size: 14px;
    }
    header.wrapper,
    #speed>.wrapper {
        width: 90%;
    }
    header {
        min-height: 250px;
    }
    header h1 {
        letter-spacing: 5px;
        font-size: 22px;
        margin-top: 50px;
    }
    #speed {
        min-height: 300px;
    }
    ul {
        top: 10px;
    }
    li {
        margin: 0 20px;
    }
    li a {
        display: block;
        text-decoration: none;
        color: black;
        border-bottom: solid 2px black;
        padding: 5px 30px;
        font-weight: bold;
    }
    li a.active {
        color: #2e9cd9;
        border: solid 2px #2e9cd9;
    }
    label>span {
        font-size: 16px;
    }
    #lead,
    #blurb {
        /* max-width: 360px; */
        width: 48.75%;
        display: inline-table;
        vertical-align: top;
    }
    #lead {
        float: left;
        width: 49%;
        margin-right: 1%;
    }
    #blurb {
        width: 49%;
        float: left;
        margin-left: 1%
    }
    #detail {
        width: 100%;
        margin-top: 0;
    }
    section {
        vertical-align: top;
        padding-left: 2.5%;
        padding-right: 2.5%;
    }
    #speed {
        margin-bottom: 50px;
    }
    #detail img {
        width: 95%;
    }
}

@media only screen and (min-width: 1200px) {
    header.wrapper,
    #speed>.wrapper {
        width: 900px;
    }
    header {
        min-height: 230px;
    }
    #lead {
        width: 46%;
        margin-right: 4%;
    }
    #speed {
        min-height: 280px;
    }
    main {
        width: 1200px;
    }
    article {
        width: 90%;
        margin: 2% auto 2% auto;
        position: relative;
        padding: 2% 2% 2% 2%;
        border-spacing: 10px 0;
    }
    #blurb {
        margin-left: 4%;
        width: 46%;
    }
    #blurb img {
        margin-right: -90%;
    }
    #detail {
        margin-left: 6%;
        width: 94%;
    }
    #detail img {
        margin-top: 5%;
        margin-left: -20%;
        width: 100%;
    }
}

